add ui for execution sql files